# edubot

api/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/api/: __init__.py  app.py  config.py  database.py  exceptions.py
api/api/solutions/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
api/api/students/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
api/api/subjects/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
api/api/teachers/: dependencies.py  exceptions.py  models.py  repositories.py  routes.py  schemas.py  services.py
api/migrations/: env.py
api/migrations/versions/: 2024_04_05_1906-34e284cec33f_.py  2024_04_06_1001-8e72c3186a56_.py  2024_04_06_1209-25a0b2511e87_.py  2024_04_06_1212-bd5e39e4d2fc_.py  2024_04_06_1216-e9cc9cd930ca_.py  2024_04_06_1750-079eff8281ae_.py  2024_04_07_1050-ac3fb82c72a6_.py  2024_04_07_1543-e279b3823439_.py  2024_04_07_1822-274af261eff5_.py  2024_04_07_2045-3fcad28a7b42_.py  2024_04_07_2236-5b5491a942d7_.py
bot/: .env  config_reader.py  entities.py  entity_types.py  future_api.py  keyboards.py  main.py  requirements.txt  states.py  validate.py
bot/lectures/: __init__.py  english.py  math.py  programms.py
bot/routers/: __init__.py  lecture_router.py  menu_router.py  profile_router.py  start_router.py  subject_router.py  subjects_router.py
web/: .env.evample  README.md  package-lock.json  package.json  tsconfig.json
web/src/: actions.ts  lib.ts
(+16 files in other folders)
